Hugo now powers this website

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,11 +1,14 @@
-home:
-  other: Home
+feed:
+  other: Feed
 
 archive:
   other: Archive
 
 tags:
   other: Tags
+
+browse:
+  other: Browse
 
 about:
   other: About
